Fix hero bg: stretch to fit container exactly

--- a/css/hero.css
+++ b/css/hero.css
@@ -6,8 +6,8 @@
   width: 100%;
   min-height: 100vh;
   background-image: url('https://lp.elitklinik.com.tr/wp-content/uploads/2026/04/header@3x-1024x502.png');
-  background-size: cover;
-  background-position: center right;
+  background-size: 100% 100%;
+  background-position: center;
   background-repeat: no-repeat;
   background-color: #0a2a52;
   position: relative;
